--- a/src/scrollbars.styl
+++ b/src/scrollbars.styl
@@ -1,6 +1,6 @@
 *:not(select)
   sbc scrollbar("thumb") base(2)
-  sbw scrollbar("width")
+  sbw thin
 ::-webkit-scrollbar
   &, .integrations-select-repos&
     max-size scrollbar("chrome-size")
